[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Other/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/States/Multiplayer/Lobby/multi_char_popup.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Multiplayer/search.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Multiplayer/loading.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Multiplayer/refresh.png" type="Texture" id=5]

[node name="MultiCharPopup" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -732.0
margin_bottom = -168.0
theme = ExtResource( 1 )
window_title = "Character Select"
script = ExtResource( 2 )

[node name="container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_container" type="HBoxContainer" parent="container"]
margin_right = 548.0
margin_bottom = 43.0

[node name="search_bar" type="LineEdit" parent="container/top_container"]
margin_right = 490.0
margin_bottom = 43.0
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = ExtResource( 3 )
placeholder_text = "Search"

[node name="refresh_button" type="Button" parent="container/top_container"]
margin_left = 502.0
margin_right = 548.0
margin_bottom = 43.0
icon = ExtResource( 5 )

[node name="sep1" type="HSeparator" parent="container"]
margin_top = 47.0
margin_right = 548.0
margin_bottom = 55.0

[node name="song_tabs" type="TabContainer" parent="container"]
margin_top = 59.0
margin_right = 548.0
margin_bottom = 106.0
tab_align = 0

[node name="local" type="Control" parent="container/song_tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
margin_bottom = -4.0

[node name="online" type="Control" parent="container/song_tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
margin_bottom = -4.0

[node name="main_container" type="VBoxContainer" parent="container"]
margin_top = 110.0
margin_right = 548.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="character_container" type="ScrollContainer" parent="container/main_container"]
margin_right = 548.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="container" type="VBoxContainer" parent="container/main_container/character_container"]
margin_right = 548.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="preview_container" type="HBoxContainer" parent="container/main_container"]
margin_top = 274.0
margin_right = 548.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="icon_preview" type="TextureRect" parent="container/main_container/preview_container"]
margin_right = 548.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="loading_icon" type="TextureRect" parent="container/main_container/preview_container/icon_preview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -25.0
margin_right = 24.5
margin_bottom = 25.0
rect_pivot_offset = Vector2( 24.5, 25.5 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="sep2" type="HSeparator" parent="container"]
margin_top = 497.0
margin_right = 548.0
margin_bottom = 505.0

[node name="bot_container" type="HBoxContainer" parent="container"]
margin_top = 509.0
margin_right = 548.0
margin_bottom = 552.0

[node name="select_button" type="Button" parent="container/bot_container"]
margin_right = 548.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "pick"

[node name="info_text" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true

[connection signal="text_changed" from="container/top_container/search_bar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="container/top_container/refresh_button" to="." method="_on_refresh_button_pressed"]
[connection signal="tab_changed" from="container/song_tabs" to="." method="_on_song_tabs_tab_changed"]
[connection signal="pressed" from="container/bot_container/select_button" to="." method="_on_select_button_pressed"]
